files/stylesheet.css
@font-face {
    font-family: 'Raleway', sans-serif;
    src: url('https://fonts.googleapis.com/css?family=Raleway')
    }
body {
   /* background-color: #453F3C; */
    background-image: url("http://i4.istockimg.com/file_thumbview_approve/76821381/5/stock-photo-76821381-abstract-geometric-background-gray.jpg")
}

h1 {
    font-family: Raleway;
    color: #71d78a;
    margin-left: 30px;
    line-height: 40px;
    opacity: 1;
}
h2 {
    font-family: Raleway;
    color: #a2b5b0;
    margin-left: 30px;
    margin-top: 30px;
    margin-bottom: 20px;
    opacity: 1;
}
h3 { font-family: Raleway;
    color: #453F3C;
    margin-left: 30px;
    opacity: 1;
  }

p {
    font-family: Raleway;
    color: #605854;
    margin-left: 30px;
    line-height: 25px;
    opacity: 1;
}

ul.notbulletlist {
   list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
   border: 1px solid #e7e7e7;
   background-color: #f3f3f3;
}


li.notbullet {
   color: #666;
   text-align: center;
   padding: 28px 14px ;
   font-family: Raleway;
   float: left;
   display:inline;
   font-size: 20px;
}

li.notbullet a:hover:not(.active) {
   background-color: #C1EDCC;
   padding: 14px 0px;
}

li.notbullet a{
   text-decoration: none;
}

li.title {
  text-decoration: none;
   text-align: center;
   padding: 14px 16px;
   font-family: Raleway;
  font-size: 40px;
   float: left;
   display:inline;
  color: #71d78a;
}

li.bullet {
   font-family: Raleway;
   color: #8d8d90;
   margin-left: 30px;
   line-height: 25px;
   list-style-type: disc;
    list-style-position: inside;
    text-indent: -30px;
    padding-left: 1em;
}

ol {
    color: #D8D8D8;
    margin-left: 30px;
    margin-top: 40px;
    margin-bottom: 80px;
    padding: 10px;
    font-family: Raleway;
}


/* IM EXPERIMENTING */
div.transbox {
  margin: 30px;
  background-color: #ffffff;
  border: 1px solid white;
  background: rgba(255, 255, 255, 0.8) /*  white background with 0% opacity */

}
/* IM EXPERIMENTING */


.active {
    color: white;
    background-color: #C1EDCC;
      padding: 14px 0px;
}

a:visited { 
  text-decoration: none; 
  color: #605854;
}


.wrapper {
  margin: 0 auto;
  max-width: 80rem; 
  padding-left : 2rem;
  overflow: auto;
}

.float_basics main {
  margin: 0;
  padding: 0 20px;
}

.float_basics aside {
  border: 1px solid black;
  float: right;
  margin: 0 0 10px 20px;
  padding: 0 20px;
  width: 250px;
}

.float_2col_fixed main,
.float_2col_fixed aside {
  float: left;
}

.float_2col_fixed main {
  padding-right: 20px;
  width: 45%; 
}

.float_2col_fixed aside {
  padding-left: 20px;
  width: 45%; 
}

p.ex1 {
    padding-top: 55px;
}

p.ex2 {
   margin-left: 0px
}

